turtleart.lessons.turtleart.Main.Polygon7.scala.error
Source:6: error: value / is not a member of (Int, Int)
		droite((5*3,14159265)/7)
                                     ^