turtleart.lessons.turtleart.Main.Polygon7.scala.code
override def run() {
	for(c <- 1 to 7)
	{
		avance(80)
		droite((5*3,14159265)/7)
	}
}
